[FIXUP] use new Xtext methods to get-rid of all remaining Guava usages